--- a/style.css
+++ b/style.css
@@ -119,6 +119,9 @@ input {
   font-size: 1.08rem;
 }
 
+imput[type="date"]{
+background:transparent;
+}
 /* input[type="date"]::-webkit-inner-spin-button,
 input[type="date"]::-webkit-calendar-picker-indicator {
     display: none;
